crates/edifact-rs-derive/tests/ui/fail_group_with_positioning.stderr
error: field `lines`: #[edifact(group)] cannot be combined with element/component positioning
  --> $DIR/fail_group_with_positioning.rs:15:15
   |
15 |     #[edifact(group, element = 0)]
   |               ^^^^^
